Add html for quote, signup, and footer

--- a/index.html
+++ b/index.html
@@ -47,5 +47,15 @@
       </div>
     </div>
   </section>
+  <aside class="quote">
+    <p>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</p>
+    <p>-Thor, God of Thunder</p>
+  </aside>
+  <section class="sign-up">
+    <h2>Call to action! It's time!</h2>
+    <p>Sign up for our product by clicking that button right over there!</p>
+    <button>Sign up</button>
+  </section>
+  <footer>Copyright &#169 The Odin Project 2021</footer>
 </body>
 </html>
