--- a/index.html
+++ b/index.html
@@ -51,11 +51,13 @@
     <p>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</p>
     <p>-Thor, God of Thunder</p>
   </aside>
-  <section class="sign-up">
-    <h2>Call to action! It's time!</h2>
-    <p>Sign up for our product by clicking that button right over there!</p>
-    <button>Sign up</button>
-  </section>
+  <div class="section-sign-up">
+    <section class="sign-up">
+      <h2>Call to action! It's time!</h2>
+      <p>Sign up for our product by clicking that button right over there!</p>
+      <button>Sign up</button>
+    </section>
+  </div>
   <footer>Copyright &#169 The Odin Project 2021</footer>
 </body>
 </html>
