--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     </main>
   </div>
   <section class="section-information">
-    <h2>Some random information</h2>
+    <h2>Some random information.</h2>
     <div class="icons">
       <div class="icon">
         <img src="./images/book.svg" alt="book icon">
