--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </div>
   </section>
   <aside class="quote">
-    <p>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</p>
-    <p>-Thor, God of Thunder</p>
+    <p class="quote-text"><em>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</em></p>
+    <p class="quote-attribution">-Thor, God of Thunder</p>
   </aside>
   <div class="section-sign-up">
     <section class="sign-up">
