Style call to action

--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
     <p class="quote-text"><em>This is an inspiring quote or testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who know? All I know is that it looks nice.</em></p>
     <p class="quote-attribution">-Thor, God of Thunder</p>
   </aside>
-  <div class="section-sign-up">
-    <section class="sign-up">
-      <h2>Call to action! It's time!</h2>
-      <p>Sign up for our product by clicking that button right over there!</p>
+  <div class="section-signup">
+    <section class="signup">
+      <div class="signup-text">
+        <h2>Call to action! It's time!</h2>
+        <p>Sign up for our product by clicking that button right over there!</p>
+      </div>
       <button>Sign up</button>
     </section>
   </div>
