--- a/index.html
+++ b/index.html
@@ -63,6 +63,6 @@
       <button>Sign up</button>
     </section>
   </div>
-  <footer>Copyright &#169 The Odin Project 2021</footer>
+  <footer><p>Copyright &#169 The Odin Project 2021</p></footer>
 </body>
 </html>
